hermes_fuzz_executed_few_shot_v3/fuzz_31_execution
'use strict';
'';
let obj = {a: 4, b: 'world'};
let f = function (a, b) {
  return this;
}.bind(obj);
f.valueOf = null;
obj === f;
 
'use strict';
'';
let obj = {a: 4, b: 'world'};
let f = () => this;
f.valueOf = null;
obj === f;
'';
 
'use strict';
'';
let engines;
const {
  createPromise,
  eval
} = new Promise(resolve => {
  resolve();
});
console.log(eval('1'));
engines = ['chrome 83.0.4103.106'];
console.time('engine');
console.timeEnd('engine');
engines.forEach(engine => eval(engine)).then(() => console.log(eval('1')));


Execution Output ------------------:
test.js:23:3: error: cannot declare 'eval'
  eval
  ^~~~
